# pydantic-data-validation-library-for-Python

./: README.md  pyproject.toml
src/pydantic_walkthrough/: __init__.py  fields_example.py  main.py  model_behaviour.py  nested_models.py
